src/objects/PFLSFTMA__TMA_Connection__mdt.object
<CustomObject>
    <fields>
        <fullName>PFLSFTMA__AuthCode__c</fullName>
        <label>AuthCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__AuthorizeUrl__c</fullName>
        <label>AuthorizeUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Namespaceprefix__c</fullName>
        <label>Namespaceprefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Service_Endpoint_Host__c</fullName>
        <label>Service Endpoint Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TMA_Connection</label>
    <pluralLabel>TMA_Connections</pluralLabel>
</CustomObject>